# smooth_waypoint_navigation

./: CMakeLists.txt  README.md  package.xml
launch/: turtlebot_in_stage.launch  turtlebot_smooth_navigation.launch
scripts/: velocity_scaler.py  waypoint_nav.py
