<?xml version="1.0"?>
<package>
  <name>turtlebot_smooth_navigation</name>
  <version>2.2.2</version>
  <description>
    Smooth Waypoint navigation using move_base action interface
  </description>

  <maintainer email="agrawalsiddharth12@gmail.com">Siddharth Agrawal</maintainer>
  <author email="agrawalsiddharth12@gmail.com">Siddharth Agrawal</author>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/turtlebot_stage</url>
  <url type="repository">https://github.com/turtlebot/turtlebot_simulator</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>move_base_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>  
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>move_base_msgs</run_depend>
 
  <run_depend>stage_ros</run_depend>
  <run_depend>navigation</run_depend>
  <run_depend>turtlebot_bringup</run_depend>
  <run_depend>turtlebot_navigation</run_depend>
  <run_depend>yocs_virtual_sensor</run_depend>
  <run_depend>yocs_velocity_smoother</run_depend>
</package>
